# py-wallet-pass

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/: apple_wallet.md  cli_usage.md  getting_started.md  google_wallet.md  pass_customization.md  samsung_wallet.md  web_service.md
examples/: apple_event_ticket_and_update.py  google_loyalty_card.py  multi_platform_pass.py  samsung_membership_card.py
py_wallet_pass/: __init__.py  cli.py  config.py  exceptions.py  storage.py  utils.py
py_wallet_pass/passport/: apple.py  base.py  google.py
py_wallet_pass/providers/: __init__.py  apple_pass.py  base.py  google_pass.py  manager.py  samsung.py
py_wallet_pass/schema/: core.py
tests/: __init__.py  conftest.py  test_config.py  test_storage.py
