[tool.poetry]
name = "py-wallet-pass"
version = "0.1.0"
description = "SDK for easily creating/managing Apple and Google wallet passes."
authors = ["DuneRaccoon <benjamincsherro@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.6"
google-auth = "^2.38.0"
google-api-python-client = "^2.165.0"
pyopenssl = "^25.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
